added question card design

--- a/index.html
+++ b/index.html
@@ -39,27 +39,27 @@
                     <div class="d-flex align-items-start">
                         <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist"
                             aria-orientation="vertical">
-                            <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill"
+                            <button class="nav-link active" id="HTML" data-bs-toggle="pill"
                                 data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home"
                                 aria-selected="true">HTML</button>
-                            <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill"
+                            <button class="nav-link" id="CSS" data-bs-toggle="pill"
                                 data-bs-target="#v-pills-profile" type="button" role="tab"
                                 aria-controls="v-pills-profile" aria-selected="false">CSS</button>
-                            <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill"
+                            <button class="nav-link" id="JS" data-bs-toggle="pill"
                                 data-bs-target="#v-pills-messages" type="button" role="tab"
                                 aria-controls="v-pills-messages" aria-selected="false">JS</button>
-                            <button class="nav-link" id="v-pills-settings-tab" data-bs-toggle="pill"
+                            <button class="nav-link" id="Java" data-bs-toggle="pill"
                                 data-bs-target="#v-pills-settings" type="button" role="tab"
                                 aria-controls="v-pills-settings" aria-selected="false">Java</button>
                         </div>
                     </div>
                 </div>
-                <div class="card-right border rounded-end-4">
+                <div class="card-right border rounded-end-4" id="card-right">
                     <h2 class="text-center">Welcome to</h2>
                     <h2 class="text-center">The Awesome Coding Quizapp</h2>
                     <h4 class="text-center">Ready for the ultimate challenge?</h4>
                     <div class="d-flex align-items-end justify-content-end h-100 w-100 p-5">
-                        <button type="button" class="btn btn-primary d-flex align-items-center gap-3">
+                        <button type="button" class="btn btn-primary d-flex align-items-center gap-3" onclick="startQuiz()">
                             Start NOW
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
