added js navigation functions

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
     </header>
     <content>
         <div class="content-container">
-
-            <div class="card-body shadow rounded-4">
+            <div class="card-body shadow rounded-4 card-positioning">
                 <div class="card-left border rounded-start-4">
                     <div>
                         <img src="img/logo.png">
