--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
                     <div class="d-flex align-items-start">
                         <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist"
                             aria-orientation="vertical">
-                            <button class="nav-link active" id="HTML" data-bs-toggle="pill"
+                            <button class="nav-link active" id="Code1" data-bs-toggle="pill"
                                 data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home"
                                 aria-selected="true">HTML</button>
-                            <button class="nav-link" id="CSS" data-bs-toggle="pill"
+                            <button class="nav-link" id="Code2" data-bs-toggle="pill"
                                 data-bs-target="#v-pills-profile" type="button" role="tab"
                                 aria-controls="v-pills-profile" aria-selected="false">CSS</button>
-                            <button class="nav-link" id="JS" data-bs-toggle="pill"
+                            <button class="nav-link" id="Code3" data-bs-toggle="pill"
                                 data-bs-target="#v-pills-messages" type="button" role="tab"
                                 aria-controls="v-pills-messages" aria-selected="false">JS</button>
-                            <button class="nav-link" id="Java" data-bs-toggle="pill"
+                            <button class="nav-link" id="Code4" data-bs-toggle="pill"
                                 data-bs-target="#v-pills-settings" type="button" role="tab"
                                 aria-controls="v-pills-settings" aria-selected="false">Java</button>
                         </div>
