--- a/index.html
+++ b/index.html
@@ -22,52 +22,52 @@
 
 <body>
     <header>
-        <nav class="navbar bg-body-tertiary">
-            <div class="container-fluid">
-                <span class="navbar-brand mb-0 h1">Quizapp</span>
+        <nav class="navbar bg-body-tertiary w-100">
+            <div class="d-flex align-items-center w-100">
+                <div class="w-10"><span class="navbar-brand mb-0 h1 cursor ps-2" onclick="location.href='index.html'">Quizapp</span></div>
+                <div class="w-100 d-flex justify-content-center d-none marginright" id="progress">
+                    <div class="progress w-25" role="progressbar" aria-label="Example with label" aria-valuenow="25"
+                        aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar" style="width: 0%" id="progressbar">0%</div>
+                    </div>
+                </div>
             </div>
         </nav>
     </header>
     <content>
-        <div class="content-container">
-            <div class="card-body shadow rounded-4 card-positioning">
-                <div class="card-left border rounded-start-4">
-                    <div>
-                        <img src="img/logo.png">
-                    </div>
-                    <div class="d-flex align-items-start">
-                        <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist"
-                            aria-orientation="vertical">
-                            <button class="nav-link active" id="Code1" data-bs-toggle="pill"
-                                data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home"
-                                aria-selected="true">HTML</button>
-                            <button class="nav-link" id="Code2" data-bs-toggle="pill"
-                                data-bs-target="#v-pills-profile" type="button" role="tab"
-                                aria-controls="v-pills-profile" aria-selected="false">CSS</button>
-                            <button class="nav-link" id="Code3" data-bs-toggle="pill"
-                                data-bs-target="#v-pills-messages" type="button" role="tab"
-                                aria-controls="v-pills-messages" aria-selected="false">JS</button>
-                            <button class="nav-link" id="Code4" data-bs-toggle="pill"
-                                data-bs-target="#v-pills-settings" type="button" role="tab"
-                                aria-controls="v-pills-settings" aria-selected="false">Java</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-right border rounded-end-4" id="card-right">
-                    <h2 class="text-center">Welcome to</h2>
-                    <h2 class="text-center">The Awesome Coding Quizapp</h2>
-                    <h4 class="text-center">Ready for the ultimate challenge?</h4>
-                    <div class="d-flex align-items-end justify-content-end h-100 w-100 p-5">
-                        <button type="button" class="btn btn-primary d-flex align-items-center gap-3" onclick="startQuiz()">
-                            Start NOW
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
-                            </svg>
-                        </button>
+        <div class="card-body shadow">
+            <div class="card-left border">
+                    <img class="cursor" src="img/logo.png" onClick="location.href='index.html'">
+                <div class="d-flex align-items-start">
+                    <div class="nav nav-pills me-3 nav-row" id="v-pills-tab" role="tablist"
+                        aria-orientation="vertical">
+                        <button class="nav-link active" id="Code1" data-bs-toggle="pill" data-bs-target="#v-pills-home"
+                            type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">HTML</button>
+                        <button class="nav-link" id="Code2" data-bs-toggle="pill" data-bs-target="#v-pills-profile"
+                            type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">CSS</button>
+                        <button class="nav-link" id="Code3" data-bs-toggle="pill" data-bs-target="#v-pills-messages"
+                            type="button" role="tab" aria-controls="v-pills-messages" aria-selected="false">JS</button>
+                        <button class="nav-link" id="Code4" data-bs-toggle="pill" data-bs-target="#v-pills-settings"
+                            type="button" role="tab" aria-controls="v-pills-settings"
+                            aria-selected="false">Java</button>
                     </div>
                 </div>
             </div>
-
+            <div class="card-right border p-2" id="card-right">
+                <h2 class="text-center">Welcome to</h2>
+                <h2 class="text-center">The Awesome Coding Quizapp</h2>
+                <h4 class="text-center">Ready for the ultimate challenge?</h4>
+                <div class="d-flex align-items-end justify-content-end h-100 w-100 p-5">
+                    <button type="button" class="btn btn-primary d-flex align-items-center gap-3" onclick="startQuiz()">
+                        Start NOW
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                            class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
         </div>
     </content>
 </body>
