--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="d-flex align-items-center w-100">
                 <div class="w-10"><span class="navbar-brand mb-0 h1 cursor ps-2" onclick="location.href='index.html'">Quizapp</span></div>
                 <div class="w-100 d-flex justify-content-center d-none marginright" id="progress">
-                    <div class="progress w-25" role="progressbar" aria-label="Example with label" aria-valuenow="25"
+                    <div class="progress bar-spacing" role="progressbar" aria-label="Example with label" aria-valuenow="25"
                         aria-valuemin="0" aria-valuemax="100">
                         <div class="progress-bar" style="width: 0%" id="progressbar">0%</div>
                     </div>
@@ -36,10 +36,10 @@
     </header>
     <content>
         <div class="card-body shadow">
-            <div class="card-left border">
+            <div class="card-left">
                     <img class="cursor" src="img/logo.png" onClick="location.href='index.html'">
                 <div class="d-flex align-items-start">
-                    <div class="nav nav-pills me-3 nav-row" id="v-pills-tab" role="tablist"
+                    <div class="nav nav-pills nav-row" id="v-pills-tab" role="tablist"
                         aria-orientation="vertical">
                         <button class="nav-link active" id="Code1" data-bs-toggle="pill" data-bs-target="#v-pills-home"
                             type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">HTML</button>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card-right border p-2" id="card-right">
+            <div class="card-right border p-3" id="card-right">
                 <h2 class="text-center">Welcome to</h2>
                 <h2 class="text-center">The Awesome Coding Quizapp</h2>
                 <h4 class="text-center">Ready for the ultimate challenge?</h4>
