--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Quizapp</title>
 
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="img/brain result.png">
+    <link rel="icon" type="image/x-icon" href="img/brainresult.png">
     <script src="script.js"></script>
     <script src="data.js"></script>
 
@@ -23,14 +23,18 @@
 <body>
     <header>
         <nav class="navbar bg-body-tertiary w-100">
-            <div class="d-flex align-items-center w-100">
-                <div class="w-10"><span class="navbar-brand mb-0 h1 cursor ps-2" onclick="location.href='index.html'">Quizapp</span></div>
-                <div class="w-100 d-flex justify-content-center d-none marginright" id="progress">
+            <div class="d-flex align-items-center justify-content-between w-100">
+                <span class="navbar-brand mb-0 h1 cursor ps-2" onclick="location.href='index.html'">Quizapp</span>
+                <div class="w-100 d-none d-flex justify-content-center" id="progress">
                     <div class="progress bar-spacing" role="progressbar" aria-label="Example with label" aria-valuenow="25"
                         aria-valuemin="0" aria-valuemax="100">
                         <div class="progress-bar" style="width: 0%" id="progressbar">0%</div>
                     </div>
                 </div>
+                <button onclick="audioSwitch()" class="btn btn-primary me-3 checker" id="audio-btn" type="button" data-bs-toggle="button"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bell-fill" viewBox="0 0 16 16">
+                    <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zm.995-14.901a1 1 0 1 0-1.99 0A5.002 5.002 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901z"/>
+                    </svg>
+                </button>
             </div>
         </nav>
     </header>
